# nearest

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
nearest/: Cargo.toml
nearest-derive/: Cargo.toml
nearest-derive/src/: attrs.rs  emit.rs  emit_proxy.rs  flat.rs  lib.rs  util.rs
nearest/benches/: region.rs
nearest/examples/: ecs.rs  expr.rs  fs.rs  fsm.rs  json.rs
nearest/src/: buf.rs  crc32.rs  emit.rs  emitter.rs  flat.rs  lib.rs  list.rs  near.rs  patch.rs  region.rs  session.rs  validate.rs
nearest/tests/: compile_fail.rs  integration.rs
nearest/tests/compile-fail/: derive_data_enum_missing_repr_c.rs  derive_data_enum_missing_repr_c.stderr  derive_enum_explicit_discriminant.rs  derive_enum_explicit_discriminant.stderr  derive_enum_missing_repr.rs  derive_enum_missing_repr.stderr  derive_non_flat_field.rs  derive_non_flat_field.stderr  derive_type_with_drop.rs  derive_type_with_drop.stderr  flat_attr_unknown_field.rs  flat_attr_unknown_field.stderr  flat_attr_unknown_variant.rs  flat_attr_unknown_variant.stderr  ref_cross_session.rs  ref_cross_session.stderr  ref_escape_session.rs  ref_escape_session.stderr
xtask/src/: main.rs
