[package]
name = "nearest-derive"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "Derive macros for the nearest crate"
repository = "https://github.com/uael/nearest"
homepage = "https://github.com/uael/nearest"
documentation = "https://docs.rs/nearest-derive"
readme = "../README.md"
keywords = ["self-relative", "pointer", "derive", "macro"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
